@@ -1,3 +1,9 @@
+2007-08-03  Jie Zhang  <jie.zhang@analog.com>
+
+	* xcycle_count.h: Processed with fix sed scripts.
+	* cycle_count.h: Likewise.
+	* cycle_count_bf.h: Likewise.
+
 2007-08-02  Jie Zhang  <jie.zhang@analog.com>
 
 	* matrix.h (MatrixMultVec3x1Frac28_4): Declare.
